[gd_scene load_steps=23 format=3 uid="uid://bhutmb7ud57lk"]

[ext_resource type="Script" uid="uid://d0pbs8dnvje5l" path="res://Scripts/Components/item_choice.gd" id="1_4pu7h"]
[ext_resource type="Texture2D" uid="uid://7h1qtewfvmnq" path="res://Assets/Items/Blank.png" id="2_32j57"]
[ext_resource type="FontFile" uid="uid://dgwg8mvobk57a" path="res://Assets/UI/Fonts/ImperatorSmallCaps Bold.ttf" id="3_5por3"]
[ext_resource type="Theme" uid="uid://cpqqj8uayl3pq" path="res://Themes/Label.tres" id="4_5por3"]
[ext_resource type="Texture2D" uid="uid://1p2fhdhgi3x4" path="res://Assets/UI/Select.png" id="4_50rcf"]
[ext_resource type="PackedScene" uid="uid://7ygdm4ameglb" path="res://Scenes/Elements/item_tooltip.tscn" id="5_5jpqp"]
[ext_resource type="Texture2D" uid="uid://7gybg0pei0fk" path="res://Resources/StatIcons/stat_gold.tres" id="5_50rcf"]
[ext_resource type="Theme" uid="uid://od14ccps1daj" path="res://Themes/descriptive_label.tres" id="8_50rcf"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_tnst4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5jpqp"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jmixh"]
bg_color = Color(0.118581, 0.118581, 0.118581, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(1, 1, 1, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_btogu"]
atlas = ExtResource("2_32j57")
region = Rect2(528, 0, 16, 16)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fif6b"]
bg_color = Color(0.199101, 0.198613, 0.189857, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_renmp"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jmixh"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fif6b"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5r5i4"]

[sub_resource type="Animation" id="Animation_jmixh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel/Selector:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Panel/Selector:pivot_offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Panel/Selector:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_66iod"]
resource_name = "hover"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel/Selector:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Panel/Selector:pivot_offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(58, 53)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Panel/Selector:scale")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.6, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0.95, 0.95), Vector2(1.05, 1.05), Vector2(0.95, 0.95)]
}

[sub_resource type="Animation" id="Animation_tnst4"]
resource_name = "stop"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel/Selector:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fif6b"]
_data = {
&"RESET": SubResource("Animation_jmixh"),
&"hover": SubResource("Animation_66iod"),
&"stop": SubResource("Animation_tnst4")
}

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_66iod"]

[node name="ItemChoice" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4pu7h")

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(100, 100)
layout_mode = 0
offset_right = 100.0
offset_bottom = 105.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_tnst4")

[node name="priceContainer" type="PanelContainer" parent="Panel"]
layout_mode = 2
offset_top = 105.0
offset_right = 100.0
offset_bottom = 135.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_5jpqp")

[node name="MarginContainer" type="MarginContainer" parent="Panel/priceContainer"]
layout_mode = 2

[node name="hboxCost" type="HBoxContainer" parent="Panel/priceContainer/MarginContainer"]
modulate = Color(1, 0.733333, 0, 1)
layout_mode = 2
theme = ExtResource("4_5por3")
theme_override_constants/separation = 5

[node name="MarginContainer2" type="MarginContainer" parent="Panel/priceContainer/MarginContainer/hboxCost"]
layout_mode = 2
size_flags_horizontal = 3

[node name="picGoldIcon" type="TextureRect" parent="Panel/priceContainer/MarginContainer/hboxCost"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
texture = ExtResource("5_50rcf")
expand_mode = 3

[node name="lblPrice" type="Label" parent="Panel/priceContainer/MarginContainer/hboxCost"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "10"

[node name="MarginContainer" type="MarginContainer" parent="Panel/priceContainer/MarginContainer/hboxCost"]
layout_mode = 2
size_flags_horizontal = 3

[node name="hboxPoor" type="HBoxContainer" parent="Panel/priceContainer/MarginContainer"]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="Panel/priceContainer/MarginContainer/hboxPoor"]
modulate = Color(1, 0.38, 0.38, 1)
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("4_5por3")
theme_override_font_sizes/font_size = 26
text = "Too  Poor!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="itemContainer" type="PanelContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_jmixh")

[node name="MarginContainer" type="MarginContainer" parent="Panel/VBoxContainer/itemContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="item_icon" type="TextureRect" parent="Panel/VBoxContainer/itemContainer/MarginContainer"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
texture = SubResource("AtlasTexture_btogu")
expand_mode = 1

[node name="orderContainer" type="PanelContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_styles/panel = SubResource("StyleBoxFlat_fif6b")

[node name="MarginContainer" type="MarginContainer" parent="Panel/VBoxContainer/orderContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 3

[node name="lblOrder" type="Label" parent="Panel/VBoxContainer/orderContainer/MarginContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.894922, 0.894922, 0.894922, 1)
theme_override_fonts/font = ExtResource("3_5por3")
theme_override_font_sizes/font_size = 12
text = "weapon"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Selector" type="NinePatchRect" parent="Panel"]
visible = false
z_index = 50
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -7.0
offset_top = -7.0
offset_right = 9.0
offset_bottom = -6.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_50rcf")
region_rect = Rect2(0, 0, 75, 75)
patch_margin_left = 25
patch_margin_top = 25
patch_margin_right = 25
patch_margin_bottom = 25

[node name="Button" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_renmp")
theme_override_styles/hover = SubResource("StyleBoxEmpty_jmixh")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_fif6b")
theme_override_styles/normal = SubResource("StyleBoxEmpty_5r5i4")

[node name="animSelect" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_fif6b")
}

[node name="ToolTip" type="Panel" parent="."]
visible = false
layout_mode = 1
offset_left = -139.0
offset_top = -183.0
offset_right = 368.0
offset_bottom = -14.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_66iod")

[node name="ItemTooltip" parent="ToolTip" instance=ExtResource("5_5jpqp")]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_right = 0.0
grow_horizontal = 1
grow_vertical = 0

[node name="pnlExpensive" type="Panel" parent="."]
visible = false
layout_mode = 0
offset_top = 35.0
offset_right = 100.0
offset_bottom = 139.0

[node name="Label" type="Label" parent="pnlExpensive"]
layout_mode = 2
offset_left = -6.0
offset_top = 54.0
offset_right = 94.0
offset_bottom = 91.0
rotation = -0.537561
theme = ExtResource("8_50rcf")
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Too 
Expensive"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="mouse_entered" from="Panel/Button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="Panel/Button" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="Panel/Button" to="." method="_on_button_pressed"]
